tests/baselines/reference/moduleAugmentationGlobal5.errors.txt
tests/cases/compiler/f1.d.ts(4,19): error TS2665: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/f2.d.ts(3,19): error TS2665: Module augmentation cannot introduce new names in the top level scope.


==== tests/cases/compiler/f3.ts (0 errors) ====
    /// <reference path="f1.d.ts"/>
    /// <reference path="f2.d.ts"/>
    import "A";
    import "B";
    
    
==== tests/cases/compiler/f1.d.ts (1 errors) ====
    
    declare module "A" {
        global {
            interface Something {x}
                      ~~~~~~~~~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
        }
    }
==== tests/cases/compiler/f2.d.ts (1 errors) ====
    declare module "B" {
        global {
            interface Something {y}
                      ~~~~~~~~~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
        }
    }